<?xml version="1.0"?>
<package>
  <name>toro</name>
  <version>0.1.0</version>
  <description>The toro autonomous vehicle package</description>

  <maintainer email="raffi.z@gmail.com">Raffi Zack</maintainer>

  <license>BSD</license>


  <author email="raffi.z@gmail.com">Randy Lewis</author>
  <author email="randylewis7@gmail.com">Raffi Zack</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>serial_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ncurses++</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>bfl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>serial_utils</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ncurses++</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>bfl</run_depend>

  <export>

  </export>
</package>
